<resources>
    <string name="app_name">Humin</string>
    <string name="loginTxt">LOGIN</string>
    <string name="loginTxtUnderLine">Have an account ?<u> Login</u></string>
    <string name="signUpTxtUnderLine">Not Have an account ?<u> Sign Up</u></string>
    <string name="signUpTxt">SIGN UP</string>
    <string name="usernameTxt">Username</string>
    <string name="emailTxt">Email</string>
    <string name="phoneTxt">Phone No.</string>
    <string name="passwordTxt">Password</string>
    <string name="contacts">List All Contacts</string>
    <string name="profile">Profile</string>
    <string name="saveBtn">Save</string>
</resources>