<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserProfileWrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgColor"
    android:orientation="vertical"
    tools:context=".UserProfile">

    <TextView
        android:id="@+id/dashHeading"
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Your Profile"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp" />


    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/userpic" />

    <LinearLayout
        android:id="@+id/addLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameEditTxt"
            style="@style/inputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_user_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/usernameTxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailEditTxt"
            style="@style/inputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofilledHighlight="@color/trans"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/emailTxt"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/phoneEditTxt"
            style="@style/inputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofilledHighlight="@color/trans"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/phoneTxt"
            android:inputType="phone|text" />

        <EditText
            android:id="@+id/passwordEditTxt"
            style="@style/inputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofilledHighlight="@color/trans"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_pass_icon"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/passwordTxt"
            android:inputType="text" />

        <Button
            android:id="@+id/saveProfile"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveBtn" />

    </LinearLayout>


</LinearLayout>