<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        style="@style/textSemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/loginTxt"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/usernameEditTxt"
                style="@style/inputStyle"
                android:background="@drawable/custom_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_user_icon"
                android:drawablePadding="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/usernameTxt" />

            <EditText
                android:id="@+id/passwordEditTxt"
                style="@style/inputStyle"
                android:background="@drawable/custom_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/custom_pass_icon"
                android:drawablePadding="10dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/passwordTxt" />

            <Button
                android:id="@+id/loginBtn"
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginTxt" />

            <TextView
                android:id="@+id/orTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Or"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/signUpTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signUpTxtUnderLine"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>